
2006-04-14

	* if_jfritz.sh: Abschließendes "#" bei gewählten Rufnummern entfernen.
	* dial.sh: Wählhilfe: dial NUMBER [PORT]
	* callmonitor.cgi.sh: JFritz ein- und ausschalten direkt über das
	Webinterface

2006-04-17: Ostermontag

	* callaction: Einfaches Skript, um Callmonitor-Aktionen von außerhalb
	aufrufen zu können.

2006-04-23:

	* if_jfritz.sh: EXT-Wert wurde nicht von out:request zu out:cancel
	übernommen.

	* check: Syntax-Check für die Listeners

	callmonitor-1.1 veröffentlicht

2006-05-06:

	* dial: Port wurde erst beim zweiten Aufruf richtig benutzt
	(Reihenfolge der POST-Parameter ist wichtig)

2006-05-13:

	* getmsg: Versteht nun auch vollständige URLs:

	    getmsg [OPTION]... <full-url-template> [<message>]...
	    <full-url-template>    http://<authority><partial-url-template>
	    <part-url-template>    e.g., /path/to/resource?query=string&message=%s
	    <authority>            [user[:password]@]host[:port]

	Bei der herkömmlichen Aufrufart können in ähnlicher Weise Port,
	Benutzer und Passwort in einem Argument angegeben werden. Diese
	Angaben überschreiben eventuell vorhandene Optionen (--port etc.).

	    getmsg [OPTION]... <authority> <part-url-template> [<message>]...
	    getmsg [OPTION]... -t <part-url-template> <authority> [<message>]...

2006-05-14:

	callmonitor-1.2 veröffentlicht

2006-05-25:

	* messages.sh: XBOX_CAPTION und DREAM_CAPTION vernünftig kodieren (URL
	+ printf)

2006-06-02:

	* callmonitor.sh: for_leases funktionierte nicht, weil IFS einen
	falschen Wert hatte (Dank an SeeDyX)

2006-06-03:

	callmonitor-1.3 veröffentlicht

2006-06-24:

	* reverse.sh: Rückwärtssuche alternativ bei wer-ist-dran.de oder
	inverssuche.de (auf Konfigurationsseite auswählbar); bitte testen, ob
	es bei irgendwelchen Nummern Fehler bei der Auflösung oder in der
	Darstellung gibt!
	* reverse.sh: Bei Verbindungsproblemen wurde fälschlicherweise das
	leere Ergebnis gecachet (Dank an jesus.christ)

	callmonitor-1.4 veröffentlicht